acomode los enlaces porque los tenia mal puestos

--- a/enlances/enlances.html
+++ b/enlances/enlances.html
@@ -12,8 +12,8 @@
     <h1>este es mi primera vez usando enlaces</h1>
     
     <a href="https://www.youtube.com/watch?v=ELSm-G201Ls&t=2820s">enlace externo:</a>
-    <a href="enlances_1.html">primer enlace</a>
-    <a href="enlances_2.html">segundo enlace</a>
+    <a href="/enlances/enlances_1.html">primer enlace</a>
+    <a href="/enlances/enlances_2.html">segundo enlace</a>
 </body>
 
 </html>
