--- a/enlances/enlances_1.html
+++ b/enlances/enlances_1.html
@@ -9,8 +9,8 @@
 
 <body>
     <h1>estoy en el primer enlace</h1>
-    <a href="enlances.html">ir a enlace base</a>
-    <a href="enlances_2.html">ir a enlaces 2</a>
+    <a href="/enlances/enlances.html">ir a enlace base</a>
+    <a href="/enlances/enlances_2.html">ir a enlaces 2</a>
 
 </body>
 
