--- a/enlances/enlances_2.html
+++ b/enlances/enlances_2.html
@@ -9,8 +9,8 @@
 
 <body>
     <h1>Estoy en el segundo enlace</h1>
-    <a href="enlances.html">ir a enlace base</a>
-    <a href="enlances_1.html">ir a enlace 1</a>
+    <a href="/enlances/enlances.html">ir a enlace base</a>
+    <a href="/enlaces/enlances_1.html">ir a enlace 1</a>
 
 </body>
 
