poniendo la funcion target="_blank" en el enlace externo para que se abra en una nueva pestaña

--- a/enlances/enlances.html
+++ b/enlances/enlances.html
@@ -14,6 +14,7 @@
     <a href="https://www.youtube.com/watch?v=ELSm-G201Ls&t=2820s">enlace externo:</a>
     <a href="/enlances/enlances_1.html">primer enlace</a>
     <a href="/enlances/enlances_2.html">segundo enlace</a>
+    <a href="https://www.youtube.com/watch?v=tza_EeTlg7A&list=RDtza_EeTlg7A&rco=1" target="_blank">Enlace externo</a> <!-- El atributo target="_blank" hace que el enlace se abra en una nueva pestaña -->
 </body>
 
 </html>
