colocando la funcion title en un enlace

--- a/enlances/enlances.html
+++ b/enlances/enlances.html
@@ -11,10 +11,10 @@
     
     <h1>este es mi primera vez usando enlaces</h1>
     
-    <a href="https://www.youtube.com/watch?v=ELSm-G201Ls&t=2820s">enlace externo:</a>
+    <a href="https://www.youtube.com/watch?v=ELSm-G201Ls&t=2820s" title="enlace que conecta a al video de  dalto">enlace externo:</a><!--el title sirve para los discapacitados visuales y para que se vea una descripcion a lo que se coloca el mouse encima-->
     <a href="/enlances/enlances_1.html">primer enlace</a>
     <a href="/enlances/enlances_2.html">segundo enlace</a>
-    <a href="https://www.youtube.com/watch?v=tza_EeTlg7A&list=RDtza_EeTlg7A&rco=1" target="_blank">Enlace externo</a> <!-- El atributo target="_blank" hace que el enlace se abra en una nueva pestaña -->
+    <a href="https://www.youtube.com/watch?v=tza_EeTlg7A&list=RDtza_EeTlg7A&rco=1" target="_blank">Enlace externo QUE SE ABRE EN OTRA PESTTAÑA </a> <!-- El atributo target="_blank" hace que el enlace se abra en una nueva pestaña -->
 </body>
 
 </html>
